Improve host/VPS compatibility

--- a/apps/relay/.env.example
+++ b/apps/relay/.env.example
@@ -32,6 +32,13 @@ RELAY_SNAPSHOT_ALLOW_STALE=1
 RELAY_SNAPSHOT_CONNECT_TIMEOUT=
 RELAY_SNAPSHOT_TRANSFER_TIMEOUT=
 RELAY_SNAPSHOT_FORCE_IPV4=0
+RELAY_SNAPSHOT_PARALLEL=
+RELAY_SNAPSHOT_RETRIES=
+
+# Extract and cache upload (host-only)
+EXTRACT_TOKEN=
+HOST_ACCOUNT_USERNAME=
+FTP_CACHE_ROOT_PATH=
 
 # Timeouts and paths
 RELAY_CONNECT_TIMEOUT=10
