Message injection fix

--- a/apps/relay/.env.example
+++ b/apps/relay/.env.example
@@ -48,6 +48,7 @@ RELAY_LOG_FILE=
 RELAY_ACCESS_LOG_FILE=
 RELAY_TIMEZONE=
 RELAY_PHP_BINARY=
+RELAY_DEBUG_LOG=0
 
 # Security and protection
 RELAY_SECURITY_HEADERS=1
